feat: Add filtration
